--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,8 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1 class="mr-2">Mingalaba</h1>
+      <h1 class="mr-2">Clickstart</h1>
+      
       <a
         target="_blank"
         href="/rss.xml"
@@ -41,25 +42,18 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        Hi!, I'm Mariano and this is my little personal blog. <br>
+        This is an opportunity to share what I have learned (and am still learning) 
+        on my backend developer journey. Where you'll find posts related to best development practices, emerging technologies,
+        and some random cool stuff that we can all love.
       </p>
       <p>
-        Read the blog posts or check
-        <LinkButton
-          className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
-        >
-          README
-        </LinkButton> for more info.
+        I hope you'll enjoy this as much as I did creating it.
       </p>
       {
         // only display if at least one social link is enabled
         socialCount > 0 && (
           <div class="social-wrapper">
-            <div class="social-links">Social Links:</div>
             <Socials />
           </div>
         )
