--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -28,6 +28,14 @@
   html[data-theme="dark"] #sun-svg {
     display: block;
   }
+  #logo_white,
+  html[data-theme="dark"] #logo_black {
+    display: none;
+  }
+  #logo_black,
+  html[data-theme="dark"] #logo_white {
+    display: block;
+  }
   body {
     @apply flex min-h-[100svh] flex-col bg-skin-fill font-mono text-skin-base 
     selection:bg-skin-accent selection:bg-opacity-70 selection:text-skin-inverted;
