Se agregaron los comentarios en los posts

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -73,7 +73,7 @@ const { activeNav } = Astro.props;
             </a>
           </li>
           <li>
-            <a href="http://marianoscotti.com" class={activeNav === "about" ? "active" : ""} target=”_blank”>
+            <a href="http://marianoscotti.com.ar" class={activeNav === "about" ? "active" : ""} target=”_blank”>
               About Me
             </a>
           </li>
